--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -151,10 +151,10 @@
 
                     </div>
                     <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">@productMax?.Name <span class="text-success"><i class="fa-solid fa-arrow-trend-up"></i></span></h5>
+                        <h5 class="card-title">@productMax?.Name <span style="color: #198754;"><i class="fa-solid fa-arrow-trend-up"></i></span></h5>
                         <p class="card-text flex-grow-1">@productMax?.Description</p>
                         <div class="mt-auto">
-                            <h4 class="text-primary mb-3">$@productMax?.Price.ToString("F2") <span class="float-right text-success">@quantityMax sold</span></h4>
+                            <h4 class="text-primary mb-3">$@productMax?.Price.ToString("F2") <span class="float-right" style="color: #198754;">@quantityMax sold</span></h4>
                         </div>
                     </div>
                 </div>
