--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
             <div class="card-body">
                 <!-- Search Bar -->
                 <div class="mb-3">
-                    <form asp-action="Index">
+                    <form asp-action="Index">..
                         <div class="row">
                             <div class="col-md-9">
                                 <div class="row">
