--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -3,13 +3,16 @@
     ViewData["Title"] = "User List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<style>
-    tbody td i{
-    }
-</style>
 <div class="card">
     <div class="card-header">
-        <h4>User List</h4>
+        <div class="row">
+            <div class="col-md-6">
+                <h4 class="card-title">User List</h4>
+            </div>
+            <div class="col-md-6">
+                <a class="btn btn-primary float-right" asp-controller="Account" asp-action="Register"><i class="fa-solid fa-circle-plus"></i> Create</a>
+            </div>
+        </div>
     </div>
     <div class="card-body">
         <div class="table-responsive">
