now you can see user role on user index

--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -31,7 +31,7 @@
                         <tr>
                             <td>@item.FirstName</td>
                             <td>@item.LastName</td>
-                            <td>@item.Position</td>
+                            <td>@item.UserRoles?.FirstOrDefault()?.Role.Name</td>
                             <td>
                                 <a asp-route-id="@item.Id" asp-action="DeleteUser"><i class="fa fa-trash"></i></a>
                             </td>
